--- a/htmltest.html
+++ b/htmltest.html
@@ -1,12 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
-<body>
-<div style="border: 1px solid black" id="copyText" contentEditable="true"></div>
-<button id="copyButton">Copy</button>
-<div id="pasteDiv" style="border: 1px solid black" contentEditable="true" data-text="Paste text here"></div>
-</body>
+<body></body>
 </html>
